# xfce4-panel-profiles

./: .bzrignore  .gitignore  .gitlab-ci.yml  AUTHORS  INSTALL  Makefile.in.in  NEWS  README  README.md  configure  meson.build  meson_options.txt  org.xfce.PanelProfiles.desktop.in  xfce4-panel-profiles.1  xfce4-panel-profiles.1.in  xfce4-panel-profiles.desktop.in  xfpanel-switch.desktop.in
data/: meson.build
data/icons/: meson.build
data/layouts/: GNOME 2.tar.bz2  Redmond.tar.bz2  Xfce 4.12.tar.bz2  Xubuntu Classic.tar.bz2  Xubuntu Modern.tar.bz2  meson.build
data/layouts/cupertino/: config.txt
data/layouts/cupertino/launcher-16/: xfce4-file-manager.desktop  xfce4-file-manager.desktop.in
data/layouts/cupertino/launcher-17/: xfce4-web-browser.desktop.in
data/layouts/gnome2/: config.txt
data/layouts/gnome2/launcher-5/: xfce4-web-browser.desktop.in
data/layouts/gnome2/launcher-6/: xfce4-mail-reader.desktop  xfce4-mail-reader.desktop.in
data/layouts/openSUSE-15.1/: config.txt
data/layouts/openSUSE-Leap-15.x/: config.txt
data/layouts/redmond/: config.txt
data/layouts/redmond7/: config.txt  whiskermenu-1.rc  whiskermenu-1.rc.in
data/layouts/redmond7/launcher-3/: xfce4-web-browser.desktop
data/layouts/unity/: config.txt  whiskermenu-1.rc  whiskermenu-1.rc.in
data/layouts/xfce-4.12/: config.txt
data/layouts/xfce-4.14/: config.txt
data/layouts/xfce-4.14/launcher-16/: xfce4-terminal-emulator.desktop.in
data/layouts/xfce-4.14/launcher-17/: xfce4-file-manager.desktop  xfce4-file-manager.desktop.in
data/layouts/xfce-4.14/launcher-18/: xfce4-web-browser.desktop
data/layouts/xfce-4.16/: config.txt
data/layouts/xfce-4.16/launcher-16/: xfce4-terminal-emulator.desktop.in
data/layouts/xfce-4.16/launcher-17/: xfce4-file-manager.desktop.in
data/layouts/xfce-4.16/launcher-18/: xfce4-web-browser.desktop.in
data/layouts/xubuntu-12.04/: config.txt
data/layouts/xubuntu-12.04/launcher-15/: xfce4-web-browser.desktop  xfce4-web-browser.desktop.in
data/layouts/xubuntu-12.04/launcher-16/: xfce4-mail-reader.desktop  xfce4-mail-reader.desktop.in
data/layouts/xubuntu-12.04/launcher-17/: xfce4-terminal-emulator.desktop  xfce4-terminal-emulator.desktop.in
data/layouts/xubuntu-12.04/launcher-20/: gnome-software.desktop
data/layouts/xubuntu-12.04/launcher-21/: libreoffice-writer.desktop
data/layouts/xubuntu-12.04/launcher-22/: gimp.desktop  parole.desktop
data/layouts/xubuntu-14.04/: config.txt  whiskermenu-1.rc  whiskermenu-1.rc.in
data/layouts/xubuntu-18.04/: config.txt  whiskermenu-1.rc  whiskermenu-1.rc.in
data/layouts/xubuntu-bionic/: config.txt
data/layouts/xubuntu-classic/: config.txt
data/layouts/xubuntu-classic/launcher-20/: 14294989536.desktop
data/layouts/xubuntu-modern/: config.txt
data/layouts/xubuntu-precise/: config.txt
data/layouts/xubuntu-precise/launcher-21/: 14294989537.desktop
data/layouts/xubuntu-precise/launcher-23/: gimp.desktop
data/metainfo/: meson.build  org.xfce.PanelProfiles.appdata.xml.in  org.xubuntu.XfpanelSwitch.appdata.xml.in
po/: LINGUAS  Makefile  Makevars  POTFILES.in  ast.po  be.po  bg.po  ca.po  cs.po  da.po  de.po  el.po  en_AU.po  en_GB.po  es.po  et.po  eu.po  fa_IR.po  fi.po  fr.po  gl.po  he.po  hi.po  hr.po  hu.po  hy_AM.po  hye.po  id.po  ie.po  is.po  it.po  ja.po  kk.po  ko.po  lt.po  ms.po  nb.po  nl.po  oc.po  pl.po  (+19 more)
xfce4-panel-profiles/: info.py.in.in  meson.build  panelconfig.py  xfce4-panel-profiles.glade  xfce4-panel-profiles.py
xfpanel-switch/: panelconfig.py  xfpanel-switch.glade  xfpanel-switch.py
